--- a/.env.example
+++ b/.env.example
@@ -1,17 +1,17 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:u6CWhrjSYooFHI+HnGcHzfcaCQDKWCsaAnedgq1VkPQ=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=http://account-activation.test
 
 LOG_CHANNEL=stack
 
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=homestead
-DB_USERNAME=homestead
-DB_PASSWORD=secret
+DB_DATABASE=account-activation
+DB_USERNAME=root
+DB_PASSWORD=
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
@@ -26,9 +26,11 @@ REDIS_PORT=6379
 MAIL_DRIVER=smtp
 MAIL_HOST=smtp.mailtrap.io
 MAIL_PORT=2525
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
-MAIL_ENCRYPTION=null
+MAIL_USERNAME=53969dfcb5a90a74f
+MAIL_PASSWORD=0163091b3f2aa1
+MAIL_ENCRYPTION=tls
+MAIL_FROM_ADDRESS=error17191@gmail.com
+MAIL_FROM_NAME=Mohamed Ahmed
 
 PUSHER_APP_ID=
 PUSHER_APP_KEY=
